--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
 //    testImplementation 'com.codeborne:selenide:5.19.0'
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.3.0'
+    testImplementation 'io.github.bonigarcia:webdrivermanager:5.1.0'
 }
 
 test {
