--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,7 +4,8 @@ stack: jdk 11  # версия JDK
 
 branches:
   only:
-    - main  # ветка git
+    - main
+    - selendine
 
 build: off  # будем использовать свой скрипт сборки
 
@@ -14,4 +15,4 @@ install:
   - chmod +x gradlew
 
 build_script:
-  - ./gradlew test -Dselenide.headless=true  # запускаем тест, флаг --info позволяет выводить больше информации
+  - ./gradlew test -Dselenide.headless=trueorigin   # запускаем тест, флаг --info позволяет выводить больше информации
