--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,4 +15,4 @@ install:
   - chmod +x gradlew
 
 build_script:
-  - ./gradlew test --info -Dselenide-headless=true
+  - ./gradlew test --info -Dselenide.headless=true
